--- a/boutique/templates/boutique/pages/base.html
+++ b/boutique/templates/boutique/pages/base.html
@@ -96,6 +96,7 @@
                   <div class="footer_logo">
                     <a href="/"><img src="{% static 'boutique/img/logo-dark.png' %}" alt="logo" /></a>
                   </div>
+                  <p>{% get_setting 'CLIENTNAME' %}</p>
                   {% static_placeholder "Footer" %}
                 </div>
                 <div class="widget">
