--- a/boutique/templates/boutique/pages/base.html
+++ b/boutique/templates/boutique/pages/base.html
@@ -96,7 +96,6 @@
                   <div class="footer_logo">
                     <a href="/"><img src="{% static 'boutique/img/logo-dark.png' %}" alt="logo" /></a>
                   </div>
-                  <p>{% get_setting 'CLIENTNAME' %}</p>
                   {% static_placeholder "Footer" %}
                 </div>
                 <div class="widget">
@@ -133,7 +132,7 @@
                   <h6 class="widget_title">Mon compte</h6>
                   <ul class="widget_links">
                     <li><a href="/compte/connexion/">Me connecter</a></li>
-                    <li><a href="/utilisateur/vos-commandes/">Mes commandes</a></li>
+                    <li><a href="{% page_url 'orders' %}">Mes commandes</a></li>
                     <li><a href="/utilisateur/profil/">Profil</a></li>
                   </ul>
                 </div>
