--- a/boutique/templates/boutique/pages/drawer-cart.html
+++ b/boutique/templates/boutique/pages/drawer-cart.html
@@ -7,5 +7,5 @@
     <span>Sous-total :</span>
     <span id="dm-drawer-price">0$</span>
   </div>
-  <a href="/commande" class="btn btn-order pink d-block">Commander</a>
+  <a href="/commande" class="btn btn-fill-out d-block btn-addtocart">Commander</a>
 </div>
