--- a/boutique/templates/clients/d-shop/pages/base.html
+++ b/boutique/templates/clients/d-shop/pages/base.html
@@ -5,12 +5,10 @@
   <link rel="stylesheet" type="text/css" href="{% static 'clients/d-shop/css/style.css' %}" />
 {% endblock head %}
 
-{% block main-header %}header{% endblock main-header %}
+{% block main-header %}{% endblock main-header %}
 
 {% block main-content %}
 
-  main top
   {% block content %}{% endblock content %}
-  main bot
 
 {% endblock main-content %}
