--- a/boutique/templates/clients/d-shop/pages/default.html
+++ b/boutique/templates/clients/d-shop/pages/default.html
@@ -3,8 +3,6 @@
 
 {% block main-content %}
 
-  main top
-  {% block content %}{% endblock content %}
-  main bot
+  {% placeholder 'Contenu' %}
 
 {% endblock main-content %}
