--- a/boutique/templates/plugins/bloc-infolettre.html
+++ b/boutique/templates/plugins/bloc-infolettre.html
@@ -1,44 +1,29 @@
 {% load static thumbnail cms_tags i18n boutique_tags %}
 
 <!-- BEGIN: infolettre -->
-<section class="newslatter-section ptb180">
-  {% if instance.image %}
-    {% thumbnail instance.image "1026x745" crop="scale" as thumb %}
-    <div class="newslatter-bg" style="background-image:url({{thumb.url}})"></div>
-  {% endif %}
-  <div class="container">
-    <div class="row">
-      <div class="col-xl-6 col-lg-6 col-md-12">
-        {% if instance.title or instance.subtitle %}
-          <div class="title-bl text-center bg-nl-icon">
-            {% if instance.title %}
-              <div class="title wow fadeIn animated">
-                {{instance.title}}
-              </div>
-            {% endif %}
-            {% if instance.subtitle %}
-              <div class="subtitle color-17">
-                {{instance.subtitle}}
-              </div>
-            {% endif %}
+<section class="section-infolettre">
+  <div class="section bg_default small_pt small_pb mt-4"{% if instance.image %} style="background-image:url('{{instance.image.url}}');"{% endif %}>
+    <div class="container">
+      <div class="row align-items-center">
+        {% if instance.title or instance.subtitle or instance.text %}
+          <div class="col-md-6">
+            <div class="heading_s1 mb-md-0 heading_light">
+              {% if instance.title %}<h3>{{instance.title}}</h3>{% endif %}
+              {% if instance.subtitle %}<h5>{{instance.subtitle}}</h5>{% endif %}
+              {% if instance.text %}{{instance.text}}{% endif %}
+            </div>
           </div>
         {% endif %}
-        {% if instance.text %}
-          <div class="subscribe-text">
-            {{instance.text}}
+        <div class="col-md-6">
+          <div class="newsletter_form">
+            <form method="post" name="infolettre" action="/fr/infolettre/">
+              {% csrf_token %}
+              <input type="text" required="" id="email_infolettre" name="email_infolettre" class="form-control rounded-0" placeholder="Votre courriel" />
+              <input type="text" required="" id="calcul_infolettre" name="calcul_infolettre" class="form-control rounded-0" placeholder="4 + 2 = ?" />
+              <button type="submit" class="btn btn-dark rounded-0" name="submit" value="Submit">{{instance.label}}</button>
+            </form>
           </div>
-        {% endif %}
-        <form action="#" class="default-form">
-          <div class="d-inline-block">
-            <input type="text" class="default-input" placeholder="Votre nom">
-          </div>
-          <div class="d-inline-block">
-            <input type="email" class="default-input" placeholder="Votre courriel">
-          </div>
-          <div class="submit-btn">
-            <input type="submit" class="btn pink" value="{{instance.label}}">
-          </div>
-        </form>
+        </div>
       </div>
     </div>
   </div>
