--- a/boutique/templates/boutique/catalog/productdefault-detail.html
+++ b/boutique/templates/boutique/catalog/productdefault-detail.html
@@ -1,133 +1,7 @@
-{% extends "boutique/catalog/product-detail.html" %}
-{% load static i18n cms_tags thumbnail %}
+{% load dmodules_tags %}
 
-{% block breadcrumb %}
-  <section class="page-name">
-    <div class="container">
-      <div class="row">
-        <div class="col-xl-12 name-wrapper">
-          <div class="page-title">
-            <h1>{% render_model product "product_name" %}</h1>
-          </div>
-          <div class="breadcrumbs">
-            <div class="breadcrumbs-item">
-              <a href="/">Accueil</a>
-            </div>
-            <div class="breadcrumbs-item">
-              <a href="/">{{product.product_category.name}}</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-{% endblock %}
+{% get_setting 'CLIENT_SLUG' as client %}
 
-{% block main-content %}
-  <section class="ptb180">
-    <div class="container">
-      <div class="row">
-        <div class="product-top-container col-xl-12">
-          <div class="row">
-            <div class="col-md-6">
-              {% if product.images.first %}
-                <div class="full-image-slider">
-                  {% for image in product.images.all %}
-                    {% thumbnail image 570x530 crop as thumb %}
-                      <div class="full-item">
-                        <img src="{{thumb.url}}" alt="">
-                      </div>
-                  {% endfor %}
-                </div>
-                <div class="nav-image-slider">
-                  {% for image in product.images.all %}
-                    {% thumbnail image 270x230 crop as thumb %}
-                    <div class="small-item" style="background-image: url({{thumb.url}});"></div>
-                  {% endfor %}
-                </div>
-              {% else %}
-                <div class="full-image-slider">
-                  <div class="full-item">
-                    <img src="https://via.placeholder.com/570x530" alt="">
-                  </div>
-                </div>
-              {% endif %}
-            </div>
-            <div class="col-md-6">
-              <div class="product-content-box">
-                <div class="product-rating-price table">
-                  <div class="d-table-row">
-                    <div class="rating d-table-cell">
-                    </div>
-                    <div class="product-price text-right">
-                      {% render_model product "unit_price" %}
-                    </div>
-                  </div>
-                </div>
-                <div class="top-meta">
-                  <h3 class="product-title">
-                    {% render_model product "product_name" %}
-                  </h3>
-                  <div class="product-meta">
-                    <div class="product-caption d-inline-block">
-                      {{ product.caption|safe }}
-                    </div>
-                  </div>
-                </div>
-                <div class="product-buy-box">
-                  {% if product.quantity > 0 %}
-                    <div class="item-number">
-                      <div class="number-form d-inline-block align-top">
-                        <input type="number" class="dm-btn-quantity input-num" value="1" min="1" max="{{product.quantity}}">
-                        <div class="quantity-bl">
-                          <div class="up-arrow">
-                            <i class="fa fa-angle-up" aria-hidden="true"></i>
-                          </div>
-                          <div class="down-arrow">
-                            <i class="fa fa-angle-down" aria-hidden="true"></i>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="btn blue d-inline-block align-top dm-add2cart btn" data-product="{{product.slug}}" data-quantity="1">
-                        Ajouter au panier
-                      </div>
-                    </div>
-                  {% else %}
-                    <div>
-                      <div class="pt-5 product-caption d-inline-block">
-                        Ce produit n'est actuellement plus disponible.
-                      </div>
-                    </div>
-                  {% endif %}
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        {% if product.description %}
-          <div class="product-bottom-container col-xl-12">
-            <div class="tabs default-tabs">
-              <div class="tabs-nav">
-                <ul class="list-inline nav nav-tabs">
-                  <li>
-                    <a href="#descroption" data-toggle="tab" class="fsize-14 fweight-700 uppercase active show"
-                      aria-expanded="true">
-                      Description
-                    </a>
-                  </li>
-                </ul>
-              </div>
-              <div class="tab-content relative">
-                <div class="tab-pane fade text-left clearfix active show" id="descroption">
-                  <div class="main-text">
-                    {{ product.description|safe }}
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        {% endif %}
-      </div>
-    </div>
-  </section>
-{% endblock main-content %}
+{% with "clients/"|add:client|add:"/catalog/productdefault-detail.html" as path %}
+  {% include path %}
+{% endwith %}
