--- a/boutique/templates/boutique/pages/base.html
+++ b/boutique/templates/boutique/pages/base.html
@@ -201,5 +201,6 @@
     <script src="{% static 'boutique/js/drawer.min.js' %}"></script>
     <script src="{% static 'boutique/js/dmodules.js' %}"></script>
     {% render_block "js" %}
+    {% block foot %}{% endblock foot %}
   </body>
 </html>
