--- a/boutique/templates/clients/d-shop/pages/default.html
+++ b/boutique/templates/clients/d-shop/pages/default.html
@@ -1,4 +1,4 @@
-{% extends "boutique/pages/default.html" %}
+{% extends "clients/d-shop/pages/base.html" %}
 {% load static thumbnail cms_tags i18n sekizai_tags boutique_tags %}
 
 {% block main-content %}
