--- a/boutique/static/boutique/css/dmodules.css
+++ b/boutique/static/boutique/css/dmodules.css
@@ -325,6 +325,19 @@ body{
   color:#41b6e6;
   font-weight:600;
 }
+.product-card .price del{
+  color:#292b2c;
+  font-size:0.9rem;
+  font-weight:400;
+  padding:0 0 0 6px;
+}
+
+/* ===--- Breadcrumbs ---=== */
+.breadcrumbs-item a + a{
+  border-left:1px solid #202325;
+  padding-left:0.5rem;
+  margin-left:0.5rem;
+}
 
 /* ===--- Categories ---=== */
 .dm-produits-category-submenu{
