--- a/boutique/templates/clients/d-shop/pages/base.html
+++ b/boutique/templates/clients/d-shop/pages/base.html
@@ -12,3 +12,7 @@
   {% block content %}{% endblock content %}
 
 {% endblock main-content %}
+
+{% block foot %}
+  <script src="{% static 'clients/d-shop/js/scripts.js' %}"></script>
+{% endblock foot %}
