--- a/boutique/templates/clients/d-shop/pages/produits.html
+++ b/boutique/templates/clients/d-shop/pages/produits.html
@@ -47,19 +47,21 @@
                 </div>
                 <div class="product_header_right">
                   <div class="products-filters">
-                    <div class="filters-boxes">
-                      <label class="filters-box dm-tous checked">
-                        <input type="checkbox" name="tous" checked />
-                        <div class="filters-text">Tous</div>
-                      </label>
-                      {% dm_get_filters_all as filters %}
-                      {% for filter in filters %}
-                        <label class="filters-box">
-                          <input type="checkbox" name="{{filter.name|slugify}}" />
-                          <div class="filters-text">{{filter.name}}</div>
+                    {% dm_get_filters_all as filters %}
+                    {% if filters.count > 0 %}
+                      <div class="filters-boxes">
+                        <label class="filters-box dm-tous checked">
+                          <input type="checkbox" name="tous" checked />
+                          <div class="filters-text">Tous</div>
                         </label>
-                      {% endfor %}
-                    </div>
+                        {% for filter in filters %}
+                          <label class="filters-box">
+                            <input type="checkbox" name="{{filter.name|slugify}}" />
+                            <div class="filters-text">{{filter.name}}</div>
+                          </label>
+                        {% endfor %}
+                      </div>
+                    {% endif %}
                   </div>
                 </div>
               </div>
