--- a/boutique/static/boutique/css/dmodules.css
+++ b/boutique/static/boutique/css/dmodules.css
@@ -166,6 +166,9 @@ body{
   font-weight:400;
   line-height:120%;
 }
+.dm-drawer-inner #drawer-items-list ul{
+  list-style:none;
+}
 .dm-drawer-inner #drawer-items-list li,
 .dm-drawer-inner #drawer-soumission-list li{
   padding:1rem 0;
